[BE-10] feat: удалены старый расчёт статистики и ручка /api/employee/statistics
